--- a/browser/src/app/components/home/main-guide/main-guide.component.scss
+++ b/browser/src/app/components/home/main-guide/main-guide.component.scss
@@ -55,7 +55,7 @@
 
 .main-guide-card {
   width: 33.3333333%;
-  max-width: 300px;
+  max-width: 320px;
   border-radius: 2px;
   padding-right: 20px;
 
@@ -83,7 +83,7 @@
     }
 
     .guide-card-title {
-      font-size: 24px;
+      font-size: 23px;
       text-align: left;
       color: $black-800;
       font-weight: 600;
