--- a/browser/src/app/shared/testimonials/testimonials.component.scss
+++ b/browser/src/app/shared/testimonials/testimonials.component.scss
@@ -32,6 +32,7 @@
         flex-direction: column;
         justify-content: space-between;
         width: 470px;
+        height: 100%;
         background: #FFFFFF;
         box-shadow: 0px 5px 20px rgba(38, 47, 86, 0.12);
         border-radius: 20px;
@@ -128,23 +129,24 @@
   .controls-wrapper {
     position: absolute;
     right: 0;
-    top: -15px;
+    top: calc(-10%);
     width: 120px;
-    height: 415px;
-    padding: 135px 30px;
-    background-color: white;
+    height: calc(100% * 1.2);
+    background-color: #ffffff;
     z-index: 20;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     @include response-to(sm) {
       display: none;
     }
 
     .controls {
-      height: 100%;
       background-color: transparent;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
 
       .next {
         cursor: pointer;
@@ -156,6 +158,8 @@
         border-radius: 50%;
         background: rgba($dark, 0.2);
         color: white;
+        margin-bottom: 20px;
+
         span.material-icons {
           font-size: 36px;
         }
